--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SERVER_PORT=8080
 ENVIRONMENT=development
 LOG_LEVEL=info
 DATABASE_URL=
+DATABASE_URL_POOLER=
 JWT_SECRET_KEY=
 REDIS_ADDR=
 REDIS_PASSWORD=
