--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-SERVER_PORT=8080
-ENVIRONMENT=development
-LOG_LEVEL=info
+SERVER_PORT="8080"
+ENVIRONMENT="development"
+LOG_LEVEL="info"
 DATABASE_URL=
 DATABASE_URL_POOLER=
 JWT_SECRET_KEY=
 REDIS_ADDR=
 REDIS_PASSWORD=
 REDIS_DB=0
-RATE_LIMIT=100
+RATE_LIMIT="100"
